		* Added possibility to give the path for output right with
		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.
		* Fixed typos in the man pages.
		* Added manpage for amulegui.

	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.
		* Patch for redefinition of $(docdir) in docs/Makefile.am.
		* Patch for aMule .desktop files.

	GonoszTopi:
		* Added ability to compile amulecmd without threading support.
		* Sed denoiser - removes excessive messages from compilation - 
		  Thanks to Vollstrecker for the idea and discussions.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed source seeds handling on startup.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CCs CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.

	Hermit:
		* Patch for amulecmd history which ensures that when the same command
		  is repeated several times in a row it only gets recorded in the
		  history once.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

	Kry:
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6

	nvinay:
		* Trivial issue with memset found using google codesearch which may
		affect only the debugging.

	Phoenix:
		* Fix for crash in amulegui/DownloadListCtrl.cpp.
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.
		* Fix for server disconnection during global search.
		* No more wxARRAY's in amuleweb.