@@ -9,11 +9,21 @@ EXTRA_DIST = ABOUT-NLS config.rpath mkinstalldirs \
 	amule.rc MakefileWIN32 configWIN32.h amule.msp \
 	amule.ico
 
-dist_icon_DATA = amule.xpm
+dist_icon_DATA = 
 icondir = $(datadir)/pixmaps
 
-dist_util_DATA = amule.desktop
+dist_util_DATA = 
 utildir = $(datadir)/applications
+
+if MONOLITHIC
+dist_icon_DATA += amule.xpm
+dist_util_DATA += amule.desktop
+endif
+
+if AMULE_GUI
+dist_icon_DATA += amulegui.xpm
+dist_util_DATA += amulegui.desktop
+endif
 
 ACLOCAL_AMFLAGS = -I m4
 
